Fixed alignment, sizing of buttons

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,6 +25,7 @@ body {
     padding-bottom: 5%;
     margin: auto;
     font-size: min(3vw,3vh);
+    text-align: justify;
 }
 
 .center {
@@ -53,7 +54,7 @@ body {
     display: inline-block;
     right: 0;
     width: min(10vw,10vh);
-    height: 100%;
+    height: 100%;;
 }
 
 .side-container {
@@ -63,18 +64,18 @@ body {
 
 .side-container img {
     margin: min(1.5vw,1.5vh);
-    width: 90%;
-    height: 90%;
+    width: 75%;
+    height: 750%;
 }
 
 .side-container p {
     writing-mode: vertical-rl;
     text-orientation: mixed;
-    margin: auto;
+    margin-left: min(0.5vw,0.5vh);
+    float: left;
 
     font-size: min(2.5vw,2.5vh);
     font-weight: bold;
-    font-family: 'Roboto', sans-serif;
     color: white;
 }
 
